--- a/_posts/2015-11-21-html笔记.md
+++ b/_posts/2015-11-21-html笔记.md
@@ -1,7 +1,8 @@
 ---
-layout: article
+layout: post
 title: html笔记
-category: code
+category: ["html"]
+tags: ["html","code"]
 ---
 ## HTML 标签
 ###引用：
